# AutoML-Pipeline

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: config.yaml
notebooks/: 01_automl_exploration.ipynb
outputs/models/: automl_pipeline.joblib
src/: main.py
src/data/: simulator.py
src/models/: automl.py
src/utils/: config.py
src/visualization/: plots.py
tests/: test_automl.py  test_simulator.py
