[build-system]
requires = ["setuptools>=68","wheel"]
build-backend = "setuptools.backends.legacy:build"
[project]
name = "day24-automl-omics"
version = "1.0.0"
description = "AutoML pipeline comparing 13+ models on microbiome IBD data (FLAML + manual benchmark)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = ["numpy>=1.24","pandas>=2.0","scikit-learn>=1.3","flaml>=2.1",
    "matplotlib>=3.7","seaborn>=0.13","joblib>=1.3","pyyaml>=6.0"]
[project.optional-dependencies]
dev = ["pytest>=7.4","black","ruff"]
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
